--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="font.css">
 </head>
 <body>
-    <canvas width="500" height="500"></canvas>
+    <canvas width="500" height="500" id="main" style="background-color: black;"></canvas>
+    <canvas width="500" height="500" id="color" style="display: none;"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
