--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="font.css">
+    <meta property="og:title" content="<==" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://space.astroide.repl.co/icon.png" />
+    <meta property="og:image:width" content="16" />
+    <meta property="og:image:height" content="16" />
 </head>
+
 <body>
     <canvas width="500" height="500" id="main" style="background-color: black;"></canvas>
     <canvas width="500" height="500" id="color" style="display: none;"></canvas>
     <script src="script.js"></script>
 </body>
+
 </html>
